k8s/finstack-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finstack-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finstack-auth
  template:
    metadata:
      labels:
        app: finstack-auth
    spec:
      containers:
      - name: finstack-auth
        image: gitopssoftinator/finstack-auth-service:1.1
        ports:
        - containerPort: 4000
