k8s/finstack-notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finstack-notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finstack-notification
  template:
    metadata:
      labels:
        app: finstack-notification
    spec:
      containers:
        - name: finstack-notification
          image: gitopssoftinator/finstack-notification-service:1.0
          ports:
            - containerPort: 4003
