k8s/finstack-payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finstack-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finstack-payment
  template:
    metadata:
      labels:
        app: finstack-payment
    spec:
      containers:
        - name: finstack-payment
          image: gitopssoftinator/finstack-payment-service:1.0
          ports:
          - containerPort: 4002
