k8s/finstack-transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: finstack
    namespace: finstack
  name: finstack-transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finstack-transaction
  template:
    metadata:
  namespace: finstack
    namespace: finstack
      labels:
        app: finstack-transaction
    spec:
      containers:
        - name: finstack-transaction
          image: gitopssoftinator/finstack-transaction-service:1.1
          ports:
          - containerPort: 4004
