k8s/finstack-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finstack-auth-service
spec:
  type: ClusterIP
  selector:
    app: finstack-auth
  ports:
  - port: 4000
    targetPort: 4000
