k8s/finstack-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finstack-frontend-service
spec:
  type: NodePort
  selector:
    app: finstack-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
