k8s/finstack-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finstack-gateway-service
spec:
  type: ClusterIP
  selector:
    app: finstack-gateway
  ports:
  - port: 3000
    targetPort: 3000
