k8s/finstack-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: finstack
    namespace: finstack
  name: finstack-mongodb-service
spec:
  type: ClusterIP
  selector:
    app: finstack-mongodb
  ports:
    - port: 27017
      targetPort: 27017
