k8s/finstack-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: finstack
    namespace: finstack
  name: finstack-notification-service
spec:
  type: ClusterIP
  selector:
    app: finstack-notification
  ports:
    - port: 4003
      targetPort: 4003
