k8s/finstack-payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finstack-payment-service
spec:
  type: ClusterIP
  selector:
    app: finstack-payment
  ports:
    - port: 4002
      targetPort: 4002
