k8s/finstack-transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finstack-transaction-service
spec:
  type: ClusterIP
  selector:
    app: finstack-transation
  ports:
  - port: 4004
    targetPort: 4004
