k8s/finstack-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finstack-user-service
spec:
  type: ClusterIP
  selector:
    app: finstack-user
  ports:
   - port: 4001
     targetPort: 4001
