k8s/finstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finstack-ingress
spec:
  rules:
    - host: finstack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finstack-gateway-service
                port:
                  number: 3000
